==> js216/stm32mp135-bootloader/drivers/stm32mp13xx_hal_dma.c <==
#include "stm32mp13xx_hal_dma.h"
#include "debug.h"
#include "stm32mp13xx_hal.h"
#include "stm32mp13xx_hal_conf.h"
#include <stdint.h>
#define HAL_TIMEOUT_DMA_ABORT (5U) /* 5 ms */

HAL_StatusTypeDef HAL_DMA_Init(DMA_HandleTypeDef *hdma)
{
   uint32_t registerValue;
   uint32_t tickstart = HAL_GetTick();
   DMA_Base_Registers *regs_dma;

   /* Check the DMA peripheral handle */
   if (hdma == NULL) {
      return HAL_ERROR;
   }

   /* Check the parameters */
   assert_param(IS_DMA_STREAM_ALL_INSTANCE(hdma->Instance));
   assert_param(IS_DMA_DIRECTION(hdma->Init.Direction));
   assert_param(IS_DMA_PERIPHERAL_INC_STATE(hdma->Init.PeriphInc));
   assert_param(IS_DMA_MEMORY_INC_STATE(hdma->Init.MemInc));
   assert_param(IS_DMA_PERIPHERAL_DATA_SIZE(hdma->Init.PeriphDataAlignment));
   assert_param(IS_DMA_MEMORY_DATA_SIZE(hdma->Init.MemDataAlignment));
   assert_param(IS_DMA_MODE(hdma->Init.Mode));
   assert_param(IS_DMA_PRIORITY(hdma->Init.Priority));

   if (IS_DMA_INSTANCE(hdma) != 0U) /* DMA1 or DMA2 instance */
   {

      assert_param(IS_DMA_REQUEST(hdma->Init.Request));
#if defined(DMA3)
      if (IS_DMA3_INSTANCE(hdma) != 0U) /* DMA stream */
      {
         assert_param(IS_DMA3_REQUEST(hdma->Init.Request));
      }
#endif /* DMA3 */
      assert_param(IS_DMA_FIFO_MODE_STATE(hdma->Init.FIFOMode));
      /* Check the memory burst, peripheral burst and FIFO threshold parameters
         only when FIFO mode is enabled */
      if (hdma->Init.FIFOMode != DMA_FIFOMODE_DISABLE) {
         assert_param(IS_DMA_FIFO_THRESHOLD(hdma->Init.FIFOThreshold));
         assert_param(IS_DMA_MEMORY_BURST(hdma->Init.MemBurst));
         assert_param(IS_DMA_PERIPHERAL_BURST(hdma->Init.PeriphBurst));
      }

      /* Change DMA peripheral state */
      hdma->State = HAL_DMA_STATE_BUSY;

      /* Allocate lock resource */
      __HAL_UNLOCK(hdma);

      /* Disable the peripheral */
      __HAL_DMA_DISABLE(hdma);

      /* Check if the DMA Stream is effectively disabled */
      while ((((DMA_Stream_TypeDef *)hdma->Instance)->CR & DMA_SxCR_EN) != 0U) {
         /* Check for the Timeout */
         if ((HAL_GetTick() - tickstart) > HAL_TIMEOUT_DMA_ABORT) {
            /* Update error code */
            hdma->ErrorCode = HAL_DMA_ERROR_TIMEOUT;

            /* Change the DMA state */
            hdma->State = HAL_DMA_STATE_ERROR;

            return HAL_ERROR;
         }
      }

      /* Get the CR register value */
      registerValue = ((DMA_Stream_TypeDef *)hdma->Instance)->CR;

      /* Clear CHSEL, MBURST, PBURST, PL, MSIZE, PSIZE, MINC, PINC, CIRC, DIR,
       * CT and DBM bits */
      registerValue &= ((uint32_t)~(
          DMA_SxCR_MBURST | DMA_SxCR_PBURST | DMA_SxCR_PL | DMA_SxCR_MSIZE |
          DMA_SxCR_PSIZE | DMA_SxCR_MINC | DMA_SxCR_PINC | DMA_SxCR_CIRC |
          DMA_SxCR_DIR | DMA_SxCR_CT | DMA_SxCR_DBM));

      /* Prepare the DMA Stream configuration */
      registerValue |= hdma->Init.Direction | hdma->Init.PeriphInc |
                       hdma->Init.MemInc | hdma->Init.PeriphDataAlignment |
                       hdma->Init.MemDataAlignment | hdma->Init.Mode |
                       hdma->Init.Priority;

      /* the Memory burst and peripheral burst are not used when the FIFO is
       * disabled */
      if (hdma->Init.FIFOMode == DMA_FIFOMODE_ENABLE) {
         /* Get memory burst and peripheral burst */
         registerValue |= hdma->Init.MemBurst | hdma->Init.PeriphBurst;
      }

      /* Write to DMA Stream CR register */
      ((DMA_Stream_TypeDef *)hdma->Instance)->CR = registerValue;

      /* Get the FCR register value */
      registerValue = ((DMA_Stream_TypeDef *)hdma->Instance)->FCR;

      /* Clear Direct mode and FIFO threshold bits */
      registerValue &= (uint32_t)~(DMA_SxFCR_DMDIS | DMA_SxFCR_FTH);

      /* Prepare the DMA Stream FIFO configuration */
      registerValue |= hdma->Init.FIFOMode;

      /* the FIFO threshold is not used when the FIFO mode is disabled */
      if (hdma->Init.FIFOMode == DMA_FIFOMODE_ENABLE) {
         /* Get the FIFO threshold */
         registerValue |= hdma->Init.FIFOThreshold;

         /* Check compatibility between FIFO threshold level and size of the
          * memory burst */
         /* for INCR4, INCR8, INCR16 */
         if (hdma->Init.MemBurst != DMA_MBURST_SINGLE) {
            if (DMA_CheckFifoParam(hdma) != HAL_OK) {
               /* Update error code */
               hdma->ErrorCode = HAL_DMA_ERROR_PARAM;

               /* Change the DMA state */
               hdma->State = HAL_DMA_STATE_READY;

               return HAL_ERROR;
            }
         }
      }

      /* Write to DMA Stream FCR */
      ((DMA_Stream_TypeDef *)hdma->Instance)->FCR = registerValue;

      /* Initialize StreamBaseAddress and StreamIndex parameters to be used to
         calculate DMA steam Base Address needed by HAL_DMA_IRQHandler() and
         HAL_DMA_PollForTransfer() */
      regs_dma = (DMA_Base_Registers *)DMA_CalcBaseAndBitshift(hdma);

      /* Clear all interrupt flags */
      regs_dma->IFCR = 0x3FUL << (hdma->StreamIndex & 0x1FU);
   } else {
      hdma->ErrorCode = HAL_DMA_ERROR_PARAM;
      hdma->State     = HAL_DMA_STATE_ERROR;

      return HAL_ERROR;
   }

   /* Initialize parameters for DMAMUX channel :
      DMAmuxChannel, DMAmuxChannelStatus and DMAmuxChannelStatusMask
   */
   DMA_CalcDMAMUXChannelBaseAndMask(hdma);

   if (hdma->Init.Direction == DMA_MEMORY_TO_MEMORY) {
      /* if memory to memory force the request to 0*/
      hdma->Init.Request = DMA_REQUEST_MEM2MEM;
   }

   /* Set peripheral request  to DMAMUX channel */
   hdma->DMAmuxChannel->CCR = (hdma->Init.Request & DMAMUX_CxCR_DMAREQ_ID);

   /* Clear the DMAMUX synchro overrun flag */
   hdma->DMAmuxChannelStatus->CFR = hdma->DMAmuxChannelStatusMask;

   /* Initialize parameters for DMAMUX request generator :
      if the DMA request is DMA_REQUEST_GENERATOR0 to DMA_REQUEST_GENERATOR7
   */

   if ((hdma->Init.Request >= DMA_REQUEST_GENERATOR0) &&
       (hdma->Init.Request <= DMA_REQUEST_GENERATOR7)) {
      /* Initialize parameters for DMAMUX request generator :
      DMAmuxRequestGen, DMAmuxRequestGenStatus and DMAmuxRequestGenStatusMask */
      DMA_CalcDMAMUXRequestGenBaseAndMask(hdma);

      /* Reset the DMAMUX request generator register*/
      hdma->DMAmuxRequestGen->RGCR = 0U;

      /* Clear the DMAMUX request generator overrun flag */
      hdma->DMAmuxRequestGenStatus->RGCFR = hdma->DMAmuxRequestGenStatusMask;
   } else {
      hdma->DMAmuxRequestGen           = 0U;
      hdma->DMAmuxRequestGenStatus     = 0U;
      hdma->DMAmuxRequestGenStatusMask = 0U;
   }

   /* Initialize the error code */
   hdma->ErrorCode = HAL_DMA_ERROR_NONE;

   /* Initialize the DMA state */
   hdma->State = HAL_DMA_STATE_READY;

   return HAL_OK;
}

HAL_StatusTypeDef HAL_DMA_Abort(DMA_HandleTypeDef *hdma)
{
   /* calculate DMA base and stream number */
   DMA_Base_Registers *regs_dma;
   const __IO uint32_t *enableRegister;

   uint32_t tickstart = HAL_GetTick();

   /* Check the DMA peripheral handle */
   if (hdma == NULL) {
      return HAL_ERROR;
   }

   /* Check the DMA peripheral state */
   if (hdma->State != HAL_DMA_STATE_BUSY) {
      hdma->ErrorCode = HAL_DMA_ERROR_NO_XFER;

      /* Process Unlocked */
      __HAL_UNLOCK(hdma);

      return HAL_ERROR;
   } else {
      /* Disable DMA All Interrupts  */
      ((DMA_Stream_TypeDef *)hdma->Instance)->CR &=
          ~(DMA_IT_TC | DMA_IT_TE | DMA_IT_DME | DMA_IT_HT);
      ((DMA_Stream_TypeDef *)hdma->Instance)->FCR &= ~(DMA_IT_FE);

      enableRegister =
          (__IO uint32_t *)(&(((DMA_Stream_TypeDef *)hdma->Instance)->CR));

      /* disable the DMAMUX sync overrun IT*/
      hdma->DMAmuxChannel->CCR &= ~DMAMUX_CxCR_SOIE;

      /* Disable the stream */
      __HAL_DMA_DISABLE(hdma);

      /* Check if the DMA Stream is effectively disabled */
      while (((*enableRegister) & DMA_SxCR_EN) != 0U) {
         /* Check for the Timeout */
         if ((HAL_GetTick() - tickstart) > HAL_TIMEOUT_DMA_ABORT) {
            /* Update error code */
            hdma->ErrorCode = HAL_DMA_ERROR_TIMEOUT;

            /* Change the DMA state */
            hdma->State = HAL_DMA_STATE_ERROR;

            /* Process Unlocked */
            __HAL_UNLOCK(hdma);

            return HAL_ERROR;
         }
      }
      regs_dma       = (DMA_Base_Registers *)hdma->StreamBaseAddress;
      regs_dma->IFCR = 0x3FUL << (hdma->StreamIndex & 0x1FU);

      /* Clear the DMAMUX synchro overrun flag */
      hdma->DMAmuxChannelStatus->CFR = hdma->DMAmuxChannelStatusMask;

      if (hdma->DMAmuxRequestGen != 0U) {
         /* if using DMAMUX request generator, disable the DMAMUX request
          * generator overrun IT*/
         /* disable the request gen overrun IT*/
         hdma->DMAmuxRequestGen->RGCR &= ~DMAMUX_RGxCR_OIE;

         /* Clear the DMAMUX request generator overrun flag */
         hdma->DMAmuxRequestGenStatus->RGCFR = hdma->DMAmuxRequestGenStatusMask;
      }

      /* Change the DMA state*/
      hdma->State = HAL_DMA_STATE_READY;
      /* Process Unlocked */
      __HAL_UNLOCK(hdma);
   }
   return HAL_OK;
}

HAL_StatusTypeDef
HAL_DMA_PollForTransfer(DMA_HandleTypeDef *hdma,
                        HAL_DMA_LevelCompleteTypeDef CompleteLevel,
                        uint32_t Timeout)
{
   HAL_StatusTypeDef status = HAL_OK;
   uint32_t cpltlevel_mask;
   uint32_t tickstart = HAL_GetTick();

   /* IT status register */
   const __IO uint32_t *isr_reg;
   /* IT clear flag register */
   __IO uint32_t *ifcr_reg;

   /* Check the DMA peripheral handle */
   if (hdma == NULL) {
      return HAL_ERROR;
   }

   if (HAL_DMA_STATE_BUSY != hdma->State) {
      /* No transfer ongoing */
      hdma->ErrorCode = HAL_DMA_ERROR_NO_XFER;
      __HAL_UNLOCK(hdma);

      return HAL_ERROR;
   }
   /* Polling mode not supported in circular mode and double buffering mode */
   if ((((DMA_Stream_TypeDef *)hdma->Instance)->CR & DMA_SxCR_CIRC) != 0U) {
      hdma->ErrorCode = HAL_DMA_ERROR_NOT_SUPPORTED;
      return HAL_ERROR;
   }

   /* Get the level transfer complete flag */
   if (CompleteLevel == HAL_DMA_FULL_TRANSFER) {
      /* Transfer Complete flag */
      cpltlevel_mask = DMA_FLAG_TCIF0_4 << (hdma->StreamIndex & 0x1FU);
   } else {
      /* Half Transfer Complete flag */
      cpltlevel_mask = DMA_FLAG_HTIF0_4 << (hdma->StreamIndex & 0x1FU);
   }

   isr_reg  = &(((DMA_Base_Registers *)hdma->StreamBaseAddress)->ISR);
   ifcr_reg = &(((DMA_Base_Registers *)hdma->StreamBaseAddress)->IFCR);

   while (((*isr_reg) & cpltlevel_mask) == 0U) {
      if (IS_DMA_INSTANCE(hdma) != 0U) /* DMA1 or DMA2 instance */
      {
         if (((*isr_reg) & (DMA_FLAG_FEIF0_4 << (hdma->StreamIndex & 0x1FU))) !=
             0U) {
            /* Update error code */
            hdma->ErrorCode |= HAL_DMA_ERROR_FE;

            /* Clear the FIFO error flag */
            (*ifcr_reg) = DMA_FLAG_FEIF0_4 << (hdma->StreamIndex & 0x1FU);
         }

         if (((*isr_reg) &
              (DMA_FLAG_DMEIF0_4 << (hdma->StreamIndex & 0x1FU))) != 0U) {
            /* Update error code */
            hdma->ErrorCode |= HAL_DMA_ERROR_DME;

            /* Clear the Direct Mode error flag */
            (*ifcr_reg) = DMA_FLAG_DMEIF0_4 << (hdma->StreamIndex & 0x1FU);
         }

         if (((*isr_reg) & (DMA_FLAG_TEIF0_4 << (hdma->StreamIndex & 0x1FU))) !=
             0U) {
            /* Update error code */
            hdma->ErrorCode |= HAL_DMA_ERROR_TE;

            /* Clear the transfer error flag */
            (*ifcr_reg) = DMA_FLAG_TEIF0_4 << (hdma->StreamIndex & 0x1FU);

            /* Change the DMA state */
            hdma->State = HAL_DMA_STATE_READY;

            /* Process Unlocked */
            __HAL_UNLOCK(hdma);

            return HAL_ERROR;
         }
      }
   }

   /* Check for the Timeout (Not applicable in circular mode)*/
   if (Timeout != HAL_MAX_DELAY) {
      if (((HAL_GetTick() - tickstart) > Timeout) || (Timeout == 0U)) {
         /* Update error code */
         hdma->ErrorCode = HAL_DMA_ERROR_TIMEOUT;

         /* if timeout then abort the current transfer */
         /* No need to check return value: as in this case we will return
            HAL_ERROR with HAL_DMA_ERROR_TIMEOUT error code  */
         (void)HAL_DMA_Abort(hdma);
         /*
           Note that the Abort function will
             - Clear the transfer error flags
             - Unlock
             - Set the State
         */

         return HAL_ERROR;
      }
   }

   /*Check for DMAMUX Request generator (if used) overrun status */
   if (hdma->DMAmuxRequestGen != 0U) {
      /* if using DMAMUX request generator Check for DMAMUX request generator
       * overrun */
      if ((hdma->DMAmuxRequestGenStatus->RGSR &
           hdma->DMAmuxRequestGenStatusMask) != 0U) {
         /* Clear the DMAMUX request generator overrun flag */
         hdma->DMAmuxRequestGenStatus->RGCFR = hdma->DMAmuxRequestGenStatusMask;

         /* Update error code */
         hdma->ErrorCode |= HAL_DMA_ERROR_REQGEN;
      }
   }

   /* Check for DMAMUX Synchronization overrun */
   if ((hdma->DMAmuxChannelStatus->CSR & hdma->DMAmuxChannelStatusMask) != 0U) {
      /* Clear the DMAMUX synchro overrun flag */
      hdma->DMAmuxChannelStatus->CFR = hdma->DMAmuxChannelStatusMask;

      /* Update error code */
      hdma->ErrorCode |= HAL_DMA_ERROR_SYNC;
   }

   /* Get the level transfer complete flag */
   if (CompleteLevel == HAL_DMA_FULL_TRANSFER) {
      /* Clear the half transfer and transfer complete flags */
      if (IS_DMA_INSTANCE(hdma) != 0U) /* DMA1 or DMA2 instance */
      {
         (*ifcr_reg) = (DMA_FLAG_HTIF0_4 | DMA_FLAG_TCIF0_4)
                       << (hdma->StreamIndex & 0x1FU);
      }
      hdma->State = HAL_DMA_STATE_READY;
      /* Process Unlocked */
      __HAL_UNLOCK(hdma);
   } else /*CompleteLevel = HAL_DMA_HALF_TRANSFER*/
   {
      /* Clear the half transfer and transfer complete flags */
      if (IS_DMA_INSTANCE(hdma) != 0U) /* DMA1 or DMA2 instance */
      {
         (*ifcr_reg) = (DMA_FLAG_HTIF0_4) << (hdma->StreamIndex & 0x1FU);
      }
   }

   return status;
}
